[package]
name = "blindsprint"
version = "0.1.0"
edition = "2021"
authors = [
    "Fabrice Benhamouda",
    "William Borgeaud <williamborgeaud@gmail.com>",
    "Le Dinh Hai"
]

[dependencies]
ark-ec = "0.4.1"
ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ed25519 = "0.4.0"
ark-curve25519 = "0.4.0"
ark-std = "0.4.0"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
num-traits = "0.2.15"
zeroize = "1.5.7"
lazy_static = "1.4.0"
seq-macro = "0.3"
test-case = "3.0.0"
sha3 = "0.10"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bn254"
harness = false

[[bench]]
name = "ed25519sc"
harness = false

[profile.bench]
debug = true
